2001-09-14	Eric Norum <eric.norum@usask.ca>

	* libc/gxx_wrappers.c: Modifications to make gcc 3.x happy.

2001-08-17	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/libio_.h: Added ifdef to ensure that LOGIN_NAME_MAX
	is defined on GNU/Linux (RedHat 6.2 distribution).
	* libc/unixlibc.c: Added stubs for rtems_io_register_name() and
	rtems_io_lookup_name() so UNIX port would compile the IO manager
	sptest that registers /dev/null.

2001-08-10  Radzislaw Galler  <rgaller@et.put.poznan.pl>

	* score/cpu_asm.c (sh_set_irq_priority): Changed interrupt vector
	number range check and handling of interrupt priority regs to
	conform SH2 specs.
	* sci/sci_termios.c: New file.
	* include/sci_termios.h: New file.
	* include/Makefile.am (EXTRA_DIST): Added sci_termios.h.
	(include_sh_HEADERS): Added sci_termios.h.
	* score/ispsh7045.c (isp): Calling an ISR with immediate argument
	casued negative sign extension for vector numbers of 128 and
	above. This was fixed.
	* sci/sci.c: Cleaned initialization of SCI registers; added
	necessary setup for new TERMIOS console cooperation

2001-08-16	Joel Sherrill <joel@OARcorp.com>

	* libc/lseek.c: Modified after discussion with Eugeny S. Mints
	<jack@oktet.ru> to correct the behavior.  There were two mistakes.
	First, iop->offset was incorrectly set for SEEK_END.  Second,
	iop->offset should be left unmodified if there are errors.
	This modification attempts to fix both situations.

2001-08-16	Mike Siers <mikes@poliac.com>

	* include/rtems/termiostypes.h, include/sys/ioccom.h:
	Update of PPPD to 2.3.11 from 2.3.5 touched these files.

2001-08-16	Mike Siers <mikes@poliac.com>

	* libc/termios.c: Fix a bug in the termios implementation in
	the following scenario:
	  The General Terminal Interface document that me states that
	  if VMIN = 0 and VTIME = 0, then read() should return the minimum
	  of two values:
  		a) number of bytes available
  		b) number of bytes requested (I assume from the read call)
