@@ -1,3 +1,8 @@
+2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* libc/Makefile.am: Revamp INCLUDES handling to make automake-1.5
+	happy.
+
 2001-09-14	Eric Norum <eric.norum@usask.ca>
 
 	* libc/gxx_wrappers.c: Modifications to make gcc 3.x happy.
